# Essentia_Music_classifier

./: .gitignore  writeup.md
essentia-master/: MANIFEST.in  pyproject.toml  setup.py  wscript
essentia-master/doc/: build_sphinx_doc.sh
essentia-master/packaging/darwin/: darwin_build_tools.py
essentia_learning/: essentia_python.ipynb  essentia_tensorflow.ipynb  mfcc.sig  mfccaggr.sig  music_features.ipynb
